@@ -1,3 +1,4 @@
+0.27.8-0 @09/01/2003 16:15:00 UTC@
 0.27.7-0 @09/01/2003 02:50:00 UTC@
 0.27.6-0 @08/11/2003 20:05:00 UTC@
 0.27.5-0 @07/01/2003 12:30:00 UTC@
